# stock_price_reader

./: .gitignore  log_conf.json  memo.md  pyproject.toml  pyvenv.cfg  stock_price_reader.code-workspace
app/: extract_codes.py  get_and_save_stocks.py  get_codes_pdf.py  golden_cross_sim.py  simlator.puml  stock_info_accessor.py  test.json  time_to_trade.py  valid_stock_code.py
app/simulator/domain/: model.py  portfolio.py
tests/: test_stock_info_accessor.py
try/jpholiday/: try_jpholiday.py
