[tool.poetry]
name = "stock_price_reader"
version = "0.1.0"
description = ""
authors = ["k_yamanaka <vaivailx+git@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
TA-Lib = "^0.4.20"
pandas = "^1.2.4"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
