[tool.poetry]
name = "stock_price_reader"
version = "0.1.0"
description = ""
authors = ["k_yamanaka <vaivailx+git@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
pandas = "^1.3.0"
TA-Lib = "^0.4.20"
matplotlib = "^3.4.2"
numpy = "^1.20.0"
cvxpy = "^1.1.13"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.6b0"
isort = "^5.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
